# rk-digi-package

./: .coveragerc  README.md  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: publish-to-pypi.yml  test-cov.yml
src/rkdigi/: __init__.py  database_manager.py  email_handling.py  email_sender.py
src/rkdigi/asyncpkg/: __init__.py  async_token_client.py
src/rkdigi/syncpkg/: __init__.py  token_session.py
tests/: test_database_manager.py  test_email_sender.py  test_managed_oauth2_session.py
tests/asyncpkg/: test_managed_async_oauth2_client.py
tests/email_handling/: test_email_manager.py  test_email_reader.py  test_email_sender.py
tests/syncpkg/: test_managed_oauth2_session.py
