[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rkdigi*"]

[project.urls]
Homepage = "https://github.com/Randers-Kommune-Digitalisering/rk-digi-package"
Repository = "https://github.com/Randers-Kommune-Digitalisering/rk-digi-package"
Bug-Tracker = "https://github.com/Randers-Kommune-Digitalisering/rk-digi-package/issues"

[project]
name = "rk-digi"
version = "1.1.0"
description = "Python package with useful stuff for projects in Randers Kommune - Digitalisering"
authors = [
  { name = "Randers Kommune Digitalisering", email = "digitalisering@randers.dk" }
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "requests_oauthlib>=1.3.1",
  "SQLAlchemy>=1.4",
  "beautifulsoup4>=4.0.0"
]

[project.optional-dependencies]
postgres = [
  "psycopg2>=2.9"
]
mssql = [
  "pymssql>=2.2"
]

async = [
  "aioodbc>=0.4",
  "pyodbc>=4.0",
  "asyncpg>=0.27",
  "aiosmtplib>=1.1.6"
]

test = [
  "pytest>=7.0",
  "pytest-asyncio>=0.20",
  "pytest-cov>=4.0"
]
